# serializer version: 1
# name: test_setup[Aqua Contour]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00000000-0000-0000-0000-000000000003',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'gardena_bluetooth',
        '00000000-0000-0000-0000-000000000003',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': None,
    'model': 'Aqua Contour',
    'model_id': None,
    'name': 'My contour',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': '2.0.0',
    'via_device_id': None,
  })
# ---
# name: test_setup[Timer]
  DeviceRegistryEntrySnapshot({
    'area_id': None,
    'config_entries': <ANY>,
    'config_entries_subentries': <ANY>,
    'configuration_url': None,
    'connections': set({
      tuple(
        'bluetooth',
        '00000000-0000-0000-0000-000000000001',
      ),
    }),
    'disabled_by': None,
    'entry_type': None,
    'hw_version': None,
    'id': <ANY>,
    'identifiers': set({
      tuple(
        'gardena_bluetooth',
        '00000000-0000-0000-0000-000000000001',
      ),
    }),
    'labels': set({
    }),
    'manufacturer': None,
    'model': 'Model Number TBD',
    'model_id': None,
    'name': 'My timer',
    'name_by_user': None,
    'primary_config_entry': <ANY>,
    'serial_number': None,
    'sw_version': '1.2.3',
    'via_device_id': None,
  })
# ---
